resources/assets/scss/core/_module.scss
.module {
    > .module-section {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        visibility: hidden;
        min-width: 320px;

        &.background-video {
            > .inner {
                @include breakpoint($break-620) {
                    padding: 80px $gutter;
                }
            }
        }

        &.intro-video {
            > .inner {
                display:none;
                visibility: visible;
            }
        }
        > .inner {
            padding: 40px $gutter;

            @include breakpoint($break-620) {
                padding: 80px $gutter;
                align-items: inherit;
            }

            .content {
                margin: 0 auto;
            }
        }

        &.has-container {
            padding: 50px;
            z-index: 2;

            @include breakpoint ($break-620) {
                padding: 0 !important;
            }

            @include breakpoint(max-height 400px) {
                padding: 0 50px;
            }

            > .inner {
                position: relative;
                width: 100%;
                height: 100%;
                background: rgba(255,255,255,0.90);
                visibility: hidden;
                overflow: hidden;

                &.vimeo {
                    background: transparent;
                    top: 50%;
                    overflow: visible;
                    padding-bottom: 56.25%; /* 16:9 */
                    padding-top: 0;
                    height: 0;
                    width: inherit;

                    @include breakpoint($break-620) {
                        padding-left: $gutter;
                        padding-right: $gutter;
                    }

                    iframe {
                        position: absolute;
                        //transform: translateY(-50%);
                        top: 0;
                        left: 0;
                        width: 100%;
                        height: 100%;
                    }
                }
            }
        }
    }
}


.videoWrapper {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */
    padding-top: 25px;
    height: 0;
}
.videoWrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.module-title {
    position: relative;
    top: 50%;
    @include transform(translateY(-50%));
    h1.title {
        font-size: 40px;
        max-width: 320px;
        margin: auto;

        line-height: 1;
        color: $white;

        span {
            font-size: 18px;
        }

        &:after {
            width: 92px;
            border: 2px solid $white;
        }
    }

    .module-icon {
        text-align: center;

        &:after {
            position: relative;
            font-family: $icon;
            font-size: 90px;

            color: $white;
            position: relative;
        }
    }
}

.has-text {
    padding: 50px;

    &.module-section {
        > .inner {
            display: block;
        }
    }

    > .inner {
        .content {
            width: 445px;
            margin: 0 auto;
            font-size: 17px;
            line-height: 26px;
            color: $fontColour;
            @include breakpoint($brk-small) {
                width: 100%;
                //padding-top: 40px;
                //padding: 60px $gutter $gutter; maybe this should be there, not sure need to check. There is a 20px padding on the inner. (line 15)
                //another issue where there is an extra 60px more than the top should be.
                //looks fine on 'un-stuck'
            }
        }
    }

    .dots {
        margin: 60px auto;

        @include breakpoint($brk-small) {
            margin: 40px auto;
        }
    }

    .actions {
        text-align:center;
    }
}

.next-section {
    position: relative;
    display: block;
    width: 50px;
    height: 50px;
    cursor: pointer;
    left: 50%;
    bottom: 20px;
    transform: translate3d(-50%, 0, 0);
    z-index: 25;
    visibility: hidden;
    border: 0;
    transform-origin: 50% 50%;
    transition: bottom 100ms ease-in-out;

    &.absol {
        position: absolute;
    }

    svg {
        width: 100%;
        height: 100%;

        path.arrow {
            fill: white;
            transform: scale(1);
            transform-origin: 50% 50%;
            transition: all 0.2s ease;
        }

        path.circle {
            fill: white;
            //transition: fill 0.3s ease, opacity 0.3s ease;
            transition: all 0.3s ease;
            transform-origin: 50% 50%;
            opacity: 1;
        }

        &:hover {
            path.arrow {
                transform: scale(1.3);
            }
            path.circle {
                opacity: 0;
                transform: scale(0.85);
            }
        }
    }
}

.congrats-section {
    h1 {
        margin-bottom: 32px;
        line-height: 28px;
        letter-spacing: 0.02em;
        max-width: 445px;
    }

    p {
        max-width: 445px;
        width: 100%;
        text-align: center;
        line-height: 26px;
    }

    blockquote {
        max-width: 445px;
    }

    .actions {
        text-align:center;
        margin: 40px 0;
    }

    .congrats-container {
        width: 100%;
        height: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        position: absolute;
        top: 0;
        left: 0;
        opacity: 0;
        visibility: hidden;

        @include breakpoint($break-620) {
            align-items: inherit;
        }

        >.inner {
            padding: 40px $gutter;

            @include breakpoint($break-620) {
                padding-top: 80px;
            }
        }
    }

    .pre-complete,
    .post-complete {
        display: table;
        margin: 0 auto;

        >.inner {
            display: table-cell;
            vertical-align: middle;

            .content {
                margin: auto;
                max-width: 445px;
                width: 100%;
            }
        }
    }
}



.actions {
    text-align:center;
}

.down-arrow {
    border: 0;
    background: none;
    width: 45px;
    height: 45px;
    padding: 0;
    display:inline-block;
    cursor:pointer;

    svg {
        width: 100%;
        height: 100%;
        path {
            fill: $lightRed;
        }
    }

    svg {
        width: 100%;
        height: 100%;

        path {
            transform-origin: 50% 50%;
            transition: all 0.2s ease;
        }

        path.arrow {
            fill: $lightRed;
            transform: scale(1);
            transform-origin: 50% 50%;
            transition: all 0.2s ease;
        }

        path.circle {
            fill: $lightRed;
            transition: all 0.3s ease;
            transform-origin: 50% 50%;
            opacity: 1;
        }

        &:hover {
            path.arrow {
                transform: scale(1.3);
            }

            path.circle {
                opacity: 0;
                transform: scale(0.8);
            }
        }
    }
}

.indicator {
    position: fixed;
    top: 50%;
    transform: translateY(-50%);
    right: 0;
    height: 50px;
    width: 160px;
    z-index: 99;

    @include breakpoint($brk-large) {
        width: 50px;
        height: 100px;
    }

    @include breakpoint($break-620) {
        display: none;
    }

    .module-icon {
        width: 50px !important;
        height: 50px;
        background: $lightRed;
        padding: 8px;
        float: right;


        svg {
            width: 100%;
            height: 100%;
            path {
                fill: white;
            }
        }
    }

    .page-icon {
        &:after {
            position: relative;
            font-size: 35px;
            font-family: $icon;
            color: $white;
            top: 0;
            left: 0;
        }
    }

    .forum-icon {
        width: 110px;
        height: 50px;
        border: 2px solid $lightRed;
        border-right: 0;
        padding: 12px;
        font-size: 14px;
        color: $lightRed;
        cursor:pointer;
        text-decoration: none;
        font-weight: 500;
        float: left;
        background-color: rgba(255, 255, 255, 0.2);

        @include breakpoint($brk-large) {
            background-color: rgba(255, 255, 255, 0.9);
            width: 50px;
            border: none;
            padding: 15px 12px;
        }

        &:hover {
            svg {
                path {
                    fill: rgba($lightRed, 0.6);
                }
            }
        }

        svg {
            width: 25px;
            //height: 50px;
            display:inline-block;
            vertical-align:middle;
            margin-right: 10px;

            path {
                fill: $lightRed;
                stroke: $lightRed;
                @include transition(fill $transition);
            }

            @include breakpoint($break-800) {
                margin: 2px auto;
            }
        }

        span {
            line-height: 21px;

            @include breakpoint($brk-large) {
                display: none;
            }
        }
    }
}

[data-current-section="0"],
[data-current-section="1"] {
    .indicator {
        display: none;
    }
}

